--- a/src/main/resources/templates/layout/Plantilla2.html
+++ b/src/main/resources/templates/layout/Plantilla2.html
@@ -21,19 +21,29 @@
                 </a>
 
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/cursos/listado2">Gestiones de Clases</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/estudiantes/listado" >Gestión de Estudiantes</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/asistencia/curso" >Asistencia</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/cursos/listado2"> <!--Gestiones de Clases--> [[#{curso.titulo5}]]</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/estudiantes/listado" > <!--Gestión de Estudiantes--> [[#{estudiante.titulo2}]]</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/asistencia/curso" > <!--Asistencia--> [[#{asistencia}]]</a>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="configuracionDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                            Configuración
+                            Configuración <!--Configuración--> [[#{configuracion}]]
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="configuracionDropdown">
-                            <li><a class="dropdown-item" href="/cursos/listado">Insertar Nuevo Curso</a></li>
-                            <li><a class="dropdown-item" href="/periodos/listado">Insertar Nuevo Periodo</a></li>
-                            <li><a class="dropdown-item" href="/estudiantes/listado">Insertar Estudiante</a></li>
-                            <li><a class="dropdown-item" href="/matriculas/listado">Insertar Matricula</a></li>
+                            <li><a class="dropdown-item" href="/cursos/listado"> <!--Insertar Nuevo Curso--> [[#{plantilla2.titulo}]]</a></li>
+                            <li><a class="dropdown-item" href="/periodos/listado"> <!--Insertar Nuevo Periodo--> [[#{plantilla2.titulo2}]]</a></li>
+                            <li><a class="dropdown-item" href="/estudiantes/listado"> <!--Insertar Estudiante--> [[#{plantilla2.titulo3}]]</a></li>
+                            <li><a class="dropdown-item" href="/matriculas/listado"> <!--Insertar Matricula--> [[#{plantilla2.titulo4}]]</a></li>
                         </ul>
+                        <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Lang</a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item"  th:href="@{/(lang=es)}">ES</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+
                     </div>
 
                     <div>
