--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
     <head>
-        <title>Iniciar Sesión</title>
+        <title> <!--Iniciar sesion--> [[#{login.sesion}]]</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
@@ -23,27 +23,27 @@
             <main class="form-signin w-25 m-auto">
 
                 <form method="POST" th:action="@{/login}">
-                    <h1 class="h3 mb-3 fw-normal">Por favor inicia sesión</h1>
+                    <h1 class="h3 mb-3 fw-normal"><!--Por favor inicia sesión--> [[#{login.inicio}]]</h1>
 
                     <div class="form-floating">
                         <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                        <label for="floatingInput">Usuario</label>
+                        <label for="floatingInput"><!--Usuario--> [[#{login.usuario}]]</label>
                     </div>
                     <div class="form-floating">
                         <input type="password" class="form-control" name="password" id="password" placeholder="Password">
 
-                        <label for="floatingPassword">Contraseña</label>
+                        <label for="floatingPassword"><!--Contraseña--> [[#{login.contrasena}]]</label>
                     </div>
 
                     <div class="form-check text-start my-3">
                         <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
                         <label class="form-check-label" for="flexCheckDefault">
-                            Recuérdame
+                            <!--Recuérdame--> [[#{login.recordar}]]
                         </label>
                     </div>
                     <button class="btn btn-success" type="submit">
                         <span class="btn">
-                            <i class="fas fa-sign-in-alt"></i>Iniciar sesion
+                            <i class="fas fa-sign-in-alt"></i><!--Iniciar sesion--> [[#{login.sesion}]]
                         </span>
                     </button>
 
