--- a/src/main/resources/templates/planes/activar.html
+++ b/src/main/resources/templates/planes/activar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-bs-theme="dark">
     <head>
-        <title>Suscipcion</title>
+        <title> <!--Suscipcion--> [[#{suscripcion}]]</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
